@@ -1,5 +1,11 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* MainForm.cs: Set date picker now
+	Slight changes to the name search stuff now
+	Fixed typo with media check in
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* MainForm: Added Name Search to the main form
 
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
