@@ -1,5 +1,9 @@
 2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
 
+	* Controller.cs: fixed a typo
+
+2009-04-20  Stephen Shaw  <sshaw@decriptor.com>
+
 	* Controller.cs:
 	* DataAccess.cs: Changed to reflect the db changes
 
